<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.InfoFragment">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/image_7"
            android:layout_width="37dp"
            android:layout_height="34dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/customer_service" />

        <TextView
            android:id="@+id/customer_service2"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="19dp"
            android:gravity="top"
            android:text="@string/customer_service2"
            android:textAppearance="@style/customer_service2" />



    </LinearLayout>

    <ImageButton
        android:id="@+id/backward"
        android:layout_width="43dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="362dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/ic_backward" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="660dp"
        android:background="@color/main"
        app:menu="@menu/bottom_nav" />

    <TextView
        android:id="@+id/manager_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/manager_info1"
        android:textAppearance="@style/manager_info1"/>

    <TextView
        android:id="@+id/manager_info2"
        android:layout_width="344dp"
        android:layout_height="187dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:text="@string/manager_info2"
        android:textAppearance="@style/manager_info2" />


</FrameLayout>