<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_lar"
    android:layout_width="410dp"
    android:layout_height="730dp"
    android:clipToOutline="true"
    android:background="#FFFFFF">

    <View
        android:id="@+id/main_image"
        android:layout_width="99dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="217dp"
        android:background="@drawable/main_image" />

    <TextView
        android:id="@+id/new_start"
        android:layout_width="118dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="263dp"
        android:gravity="top"
        android:text="@string/new_start"
        android:textAppearance="@style/new_start" />

    <TextView
        android:id="@+id/already_user"
        android:layout_width="109dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="546dp"
        android:gravity="top"
        android:text="@string/already_user"
        android:textAppearance="@style/already_user" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="52dp"
        android:layout_height="21dp"
        android:layout_below="@+id/new_start"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="180dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="178dp"
        android:background="@color/white"
        android:text="로그인"
        android:visibility="visible" />

    <TextView
        android:id="@+id/membership"
        android:layout_width="98dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="594dp"
        android:gravity="top"
        android:text="@string/membership"
        android:textAppearance="@style/membership" />

    <Button
        android:id="@+id/btn_join_membership"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_below="@+id/new_start"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="179dp"
        android:layout_marginTop="322dp"
        android:layout_marginEnd="178dp"
        android:background="@color/white"
        android:text="회원가입"
        android:visibility="visible" />



</RelativeLayout>





